<resources>
    <string name="app_name">BasicLab</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="action_1">Action 1</string>
    <string name="action_2">Action 2</string>
    <string name="action_3">Action 3</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="snackbar_magic">Królik</string>
    <string name="snackbar_exit">Nie tym razem</string>
    <string name="snackbar_info">Kontakt </string>


    <string name="hello_first_fragment">I am first</string>
    <string name="hello_second_fragment">I am second fragment.</string>
    <string name="third_fragment_label">I am Third Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>