<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.basiclab.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action3"
        android:orderInCategory="30"
        android:title="@string/action_3"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action2"
        android:orderInCategory="20"
        android:title="@string/action_2"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action1"
        android:orderInCategory="10"
        android:title="@string/action_1"
        app:showAsAction="never"/>

</menu>